--- a/00_exercises/02_presentation/Literature.bib
+++ b/00_exercises/02_presentation/Literature.bib
@@ -12,3 +12,12 @@ title = {Who Will Save the Guitar?},
 year = {2019},
 }
 
+@mastersthesis{gyimesi2022thesis,
+  title={How Does Recent Crises Influence Musical Instruments Trade and What Are the Potential Forecasts for the Industry?},
+  author={Gyimesi, Felícia Gréta},
+  school={Budapest Business School, Faculty of International Management and Business},
+  year={2022},
+  month={December},
+  advisor={Dr. Csekő, Katalin},
+  type={Bachelor's Thesis}
+}
