--- a/01_research_compendium/Predicting House Prices.qmd
+++ b/01_research_compendium/Predicting House Prices.qmd
@@ -10,9 +10,11 @@ date: "2025-01-19"
 execute: 
   echo: true
 editor: source
-format:
-  pdf:
-    css: styles.css
+format: pdf
+knitr:
+  opts_chunk:
+    fig.align: 'center'    # Centers all figures
+    out.width: '70%'       # Sets figure width to 70% of the text width    
 bibliography: bibliography.bib
 csl: apa.csl
 ---
@@ -61,7 +63,11 @@ This project aims to predict house prices for a test dataset using various varia
 
 ## Data Description
 
-```{r, results = "hold"}
+Descriptives of the variables are given below. An in-depth explanation of each variable's substantive meaning and levels is given in the Data folder, which reveals that variables pertain to the location and internal components of a house. Several variables are continuous, such as `1stFlrSF`, the First Floor square footage, whilst others are categorical, such as `Heating`, the type of heating. Both types of data can be used for conducting a regression analysis so this is of no worry for the present study.
+
+Furthermore, several variables are subjectivelly measured, such as `BsmtCond`, the quality of the basement, for which no information is given concerning the appraisal process. For the purposes of the current research, however, we consider the effect of subjectivity to be negligeable on obtaining a viable model.
+
+```{r load data, echo = F, results = "hold"}
 # Load data
 train <- read.csv('Data/train.csv')
 test <- read.csv('Data/test.csv')
@@ -71,7 +77,8 @@ cat('Number of variables:')
 ncol(train)
 cat('Number of observations')
 nrow(train)
-print(paste0('Range of prices observed: ', min(train$SalePrice), ' to ', max(train$SalePrice)))
+print(paste0('Range of prices observed: ', min(train$SalePrice),
+             ' to ', max(train$SalePrice)))
 ```
 
 ##  Data Cleaning
@@ -80,7 +87,7 @@ print(paste0('Range of prices observed: ', min(train$SalePrice), ' to ', max(tra
 
 Many variables in this dataset are categorical, which we handle by converting character columns to factors for proper analysis and model fitting.
 
-```{r}
+```{r data cleaning 1}
 train <- train %>% mutate(across(where(is.character), as.factor))
 test <- test %>% mutate(across(where(is.character), as.factor))
 ```
@@ -91,7 +98,7 @@ test <- test %>% mutate(across(where(is.character), as.factor))
 
 Some of the variables are total variables, that is, they are the sum of two others. This is the case for variables TotalBsmtSF and GrLivArea. We remove them from the dataset used for prediction, as well as the ID column
 
-```{r}
+```{r data cleaning 2}
 train_clean <- train %>% select(-c(Id, BsmtUnfSF, GrLivArea))
 test_clean <- test %>% select(-c(Id, BsmtUnfSF, GrLivArea))
 ```
@@ -108,7 +115,7 @@ Given the presence of missing data in both the training and test datasets, ident
 
 Missing values in the training set:
 
-```{r, echo=F}
+```{r missing data, echo=F}
 # Calculate missing data per variable
 missing_data <- sapply(train, function(x) sum(is.na(x)))
 
@@ -140,8 +147,9 @@ Variables with missing data often represent features that do not apply to all ho
 
 We replace missing values with 0 (for numeric variables) or "none" (for categorical variables). This is done in separate datasets to measure the impact of the imputation procedure.
 
-```{r}
-# Replace missing values in numeric columns with 0 and in factor columns with 'none'
+```{r deal with missing}
+# Replace missing values in numeric columns with 0 
+# and in factor columns with 'none'
 train_zero <- train_clean %>%
   mutate(across(where(is.numeric), ~ ifelse(is.na(.), 0, .))) %>%
   mutate(across(where(is.factor), ~ fct_na_value_to_level(., "none")))
@@ -179,7 +187,7 @@ Models are first compared with general parameters and then the parameters for ca
 
 A lower bound of 10 000 is given to avoid issues with the RMSE of the likelihood.
 
-```{r, eval=F}
+```{r intricacies 1, eval=F}
 if (method == 'linear') {
         model <- lm(predictors, data = trainset)
         testset$Predicted <- pmax(predict(model, newdata = testset), 10000)
@@ -203,14 +211,15 @@ if (method == 'linear') {
         testset_rf <- testset
         
         # Identify variables to drop if levels do not match exactly
-        vars_to_drop <- c()  # Initialize an empty vector for variables to drop
+        vars_to_drop <- c()
         
         for (var in factor_vars_rf) {
           # Check if the levels match exactly
           if (!identical(levels(trainset[[var]]), levels(testset[[var]]))) {
-            vars_to_drop <- c(vars_to_drop, var)  # Add mismatched variable to drop list
+            vars_to_drop <- c(vars_to_drop, var)
             # message(paste("Dropped variable", var, "from fold", i, 
-            #               "for random forest due to mismatched levels")) # optional for tracking
+            # "for random forest due to mismatched levels")) 
+            # optional for tracking
           }
         }
         
@@ -218,9 +227,11 @@ if (method == 'linear') {
         trainset_rf <- trainset_rf %>% select(-all_of(vars_to_drop))
         testset_rf <- testset_rf %>% select(-all_of(vars_to_drop))
         
-        # Align factor levels in testset_rf to match trainset_rf for remaining factors
+        # Align factor levels in testset_rf to match trainset_rf 
+        # for remaining factors
         for (var in names(trainset_rf)[sapply(trainset_rf, is.factor)]) {
-          testset_rf[[var]] <- factor(testset_rf[[var]], levels = levels(trainset_rf[[var]]))
+          testset_rf[[var]] <- factor(testset_rf[[var]], 
+                                      levels = levels(trainset_rf[[var]]))
         }
         
         # Fit the random forest model with consistent columns
@@ -235,14 +246,15 @@ if (method == 'linear') {
           testset$Predicted <- pmax(predict(model, newdata = testset), 10000)
         
       } else if (method == 'nn') {
-        model <- nnet(predictors, data = trainset, size = 5, linout = TRUE, trace = FALSE)
+        model <- nnet(predictors, data = trainset, size = 5, linout = TRUE,
+                      trace = FALSE)
         testset$Predicted <- pmax(predict(model, newdata = testset), 10000)
       }
 ```
 
 ##  Intricacies of Methods
 
-```{r, eval=F}
+```{r intricacies 2, eval=F}
       factor_vars <- trainset %>% select(where(is.factor))
       for (var in names(factor_vars)) {
         # Get counts for each level in the training set
@@ -256,35 +268,45 @@ if (method == 'linear') {
         if (length(low_freq_levels) > 0) {
           # Create a combined "Other" category with descriptive name
           combined_name <- paste(low_freq_levels, collapse = "_")
-          trainset[[var]] <- factor(ifelse(trainset[[var]] %in% low_freq_levels, combined_name, as.character(trainset[[var]])))
+          trainset[[var]] <- factor(ifelse(trainset[[var]] %in%
+                                             low_freq_levels, combined_name,
+                                           as.character(trainset[[var]])))
           
           # Recount levels after initial collapse
           level_counts <- table(trainset[[var]])
           
-          # If the combined level still has only 1 observation, try to merge with the next least common level
+          # If the combined level still has only 1 observation, 
+          # try to merge with the next least common level
           if (level_counts[combined_name] < 2) {
-            # Find the next least common level, only if there’s more than one unique level
+            
+            # Find the next least common level, 
+            # only if there’s more than one unique level
             sorted_levels <- names(sort(level_counts))
             if (length(sorted_levels) > 1) {
-              next_level <- sorted_levels[2]  # The second smallest since the first is the combined name
+              next_level <- sorted_levels[2]  
+              
               # Update the combined level to be merged with the next level
               new_combined_name <- paste(combined_name, next_level, sep = "_")
-              trainset[[var]] <- factor(ifelse(trainset[[var]] == combined_name | trainset[[var]] == next_level, 
+              trainset[[var]] <- factor(ifelse(trainset[[var]] == combined_name | 
+                                                 trainset[[var]] == next_level, 
                                                new_combined_name, 
                                                as.character(trainset[[var]])))
             }
           }
           
           # Apply the same transformation to the test set
-          testset[[var]] <- factor(ifelse(testset[[var]] %in% low_freq_levels | testset[[var]] == next_level, 
-                                          new_combined_name, 
+          testset[[var]] <- factor(ifelse(testset[[var]] %in% 
+                                            low_freq_levels | testset[[var]] 
+                                          == next_level, new_combined_name, 
                                           as.character(testset[[var]])), 
-                                   levels = c(levels(testset[[var]]), new_combined_name))
+                                   levels = c(levels(testset[[var]]),
+                                              new_combined_name))
           testset[[var]] <- droplevels(testset[[var]])
         }
         
         # After collapsing, check if there are fewer than 2 unique levels
-        if (length(unique(trainset[[var]])) < 2 | !all(levels(testset[[var]]) %in% levels(trainset[[var]]))) {
+        if (length(unique(trainset[[var]])) < 2 |
+            !all(levels(testset[[var]]) %in% levels(trainset[[var]]))) {
           trainset <- trainset %>% select(-all_of(var))
           testset <- testset %>% select(-all_of(var))
         }
@@ -295,15 +317,18 @@ if (method == 'linear') {
 
 We apply cross-validation with various fold counts (2 to 10) to evaluate the RMSE across different model configurations.
 
-```{r, eval=F}
+```{r cross-validation, cache=T}
 # Cross-validation setup
 folds_range <- 2:10
 methods <- c('linear', 'quadratic', 'rf', 'svm')
-results_all_0 <- data.frame(Folds = integer(), Method = character(), Mean_RMSE = numeric())
+results_all_0 <- data.frame(Folds = integer(), Method = character(), 
+                            Mean_RMSE = numeric())
 
 for (folds in folds_range) {
   for (method in methods) {
-    cv_result <- cross_validate_rmse(data = train_nomissing, target = "SalePrice", folds = folds, methods = c(method))
+    cv_result <- cross_validate_rmse(data = train_nomissing, 
+                                     target = "SalePrice", folds = folds,
+                                     methods = c(method))
     cv_result$Folds <- folds
     results_all_0 <- rbind(results_all_0, cv_result)
   }
@@ -312,14 +337,9 @@ for (folds in folds_range) {
 # Plot results
 ggplot(results_all_0, aes(x = Folds, y = Mean_RMSE, color = Method)) +
   geom_line() + geom_point() +
-  labs(title = "Cross-validation RMSE per Method", x = "Folds", y = "Mean RMSE")
+  labs(title = "Cross-validation RMSE per Method", 
+       x = "Folds", y = "Mean RMSE")
 ```
-
-##  Discarded Models
-
-We tested models with interaction terms, which led to overfitting and were discarded for this project.
-
-![](Images/With Interactions.png)
 
 ##  Models Selected
 
@@ -327,13 +347,15 @@ Based on the previous cross-validation, we selected Random Forest and SVM as the
 
 ##  On the Dataset with Zero'd Missing Data
 
-```{r, eval=F}
+```{r zero missing 1, cache=T, warning=F, message=F}
 # Cross-validation on zero-imputed data
-results_all <- data.frame(Folds = integer(), Method = character(), Mean_RMSE = numeric())
+results_all <- data.frame(Folds = integer(), Method = character(), 
+                          Mean_RMSE = numeric())
 
 for (folds in folds_range) {
   for (method in methods) {
-    cv_result <- cross_validate_rmse(data = train_zero, target = "SalePrice", folds = folds, methods = c(method))
+    cv_result <- cross_validate_rmse(data = train_zero, target = "SalePrice", 
+                                     folds = folds, methods = c(method))
     cv_result$Folds <- folds
     results_all <- rbind(results_all, cv_result)
   }
@@ -341,10 +363,11 @@ for (folds in folds_range) {
 
 ggplot(results_all, aes(x = Folds, y = Mean_RMSE, color = Method)) +
   geom_line() + geom_point() +
-  labs(title = "RMSE per Model with Zero-Imputed Data", x = "Folds", y = "Mean RMSE")
+  labs(title = "RMSE per Model with Zero-Imputed Data", x = "Folds", 
+       y = "Mean RMSE")
 ```
 
-```{r, echo = F, eval=F}
+```{r zero missing 2, echo = F, cache=T}
 # Rename Mean_RMSE columns to differentiate between no-missing and zero-imputed results
 results_all_0 <- results_all_0 %>%
   rename(Mean_RMSE_no_missing = Mean_RMSE)
@@ -356,47 +379,65 @@ results_all <- results_all %>%
 comparison_results <- merge(results_all_0, results_all, by = c("Folds", "Method"))
 
 # Display the comparison table
-print(comparison_results)
+print(head(comparison_results))
 ```
 
 ##  Choice of Parameters for SVM
 
 We compare different SVM kernels (linear, polynomial, radial, sigmoid) and regression types (eps and nu) to find the optimal configuration.
 
-```{r, eval=F}
+```{r SVM parameter choice, cache=T}
 # SVM parameter options
 svm_kernels <- c("linear", "polynomial", "radial", "sigmoid")
-svm_types <- c("eps-regression", "nu-regression")
-results_svm <- data.frame(Folds = integer(), Kernel = character(), SVM_Type = character(), Mean_RMSE = numeric())
+svm_types <- c("eps", "nu")
+results_svm <- data.frame(Folds = integer(), Kernel = character(), 
+                          SVM_Type = character(), Mean_RMSE = numeric())
 
 for (kernel in svm_kernels) {
   for (svm_type in svm_types) {
-    cv_result <- cross_validate_rmse(data = train_zero, target = "SalePrice", folds = 5, methods = c("svm"),
-                                     svm_kernel = kernel, svm_type = svm_type)
+    
+    # Run cross-validation (returns columns Method, Mean_RMSE)
+    cv_result <- cross_validate_rmse(
+      data = train_zero, 
+      target = "SalePrice", 
+      folds = 5, 
+      methods = c("svm"),
+      svm_kernel = kernel, 
+      svm_type = svm_type
+    )
+    
+    # Add columns for Kernel and SVM_Type
+    cv_result$Kernel   <- kernel
+    cv_result$SVM_Type <- svm_type
+    
+    # Return the results
     results_svm <- rbind(results_svm, cv_result)
   }
 }
 
-ggplot(results_svm, aes(x = Kernel, y = Mean_RMSE, color = SVM_Type)) +
-  geom_line() + geom_point() +
-  labs(title = "SVM Kernel and Type Comparison", x = "Kernel", y = "Mean RMSE")
+ggplot(results_svm, aes(x = Kernel, y = Mean_RMSE, 
+                        color = SVM_Type, group = SVM_Type)) +
+  geom_line() +
+  geom_point() +
+  labs(title = "SVM Kernel and Type Comparison", x = "Kernel", 
+       y = "Mean RMSE")
 ```
 
 The radial kernel with nu-regression achieved the best performance, so we select this configuration for final testing.
-
-#  Performance on the Test Set
 
 ##  Performance on the Test Set
 
 Using the best SVM configuration, we generate predictions on the test set with imputed missing values (`test_zero`).
 
-```{r}
+```{r performance test}
 # Train final SVM model and predict on test_zero
-svm_model <- svm(SalePrice ~ ., data = train_zero, kernel = "radial", type = "nu-regression")
+svm_model <- svm(SalePrice ~ ., data = train_zero, kernel = "radial", 
+                 type = "nu-regression")
 test_zero$Predicted_SalePrice <- predict(svm_model, newdata = test_zero)
 
 # Prepare the submission file
-submission <- data.frame(Id = test$Id, SalePrice = test_zero$Predicted_SalePrice)
+submission <- data.frame(Id = test$Id, 
+                         SalePrice = test_zero$Predicted_SalePrice)
 write.csv(submission, file = "submission_Adam_Maghout.csv", row.names = FALSE)
 ```
 
